--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,9 @@ before_script:
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
 - sleep 3 # give xvfb some time to start
+script:
+- npm run lint
+- ember try:one $EMBER_TRY_SCENARIO --- ember test
 install:
 - npm install
 - bower install
