--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ember build",
     "start": "ember server",
     "test": "npm run lint && ember test",
-    "lint": "eslint *.js addon app config tests"
+    "lint": "eslint *.js addon app blueprints config tests"
   },
   "repository": "git@github.com:ciena-frost/ember-frost-app-bar.git",
   "engines": {
@@ -38,6 +38,7 @@
     "ember-data": "~2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-frost-core": ">=0.0.14 <2.0.0",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "ember-try": "^0.2.0",
